<resources>
    <string name="app_name">My Calculator</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="change_language">Change Language</string>
    <string name="username">Username</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="switch_to_intent">Switch to Intent</string>
    <string name="click_for_popup">Click for PopUp</string>
    <string name="alarm_on_toast" translatable="false">Alarm is on</string>
    <string name="alarm_off_toast" translatable="false">Alarm is off</string>
    <string name="notification_title">Stand Up Alert!</string>
    <string name="notification_text">You should stand up and walk around!</string>

</resources>